<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <ListView
        android:layout_margin="20dp"
        android:id="@+id/buses_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <Button
        android:layout_margin="10dp"
        android:id="@+id/load_bus_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_bus_button"
        android:layout_gravity="center"
        />
    <Button
        android:layout_margin="10dp"
        android:id="@+id/add_bus_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_bus_button_text"
        android:layout_gravity="center"
        />
    <Button
        android:layout_margin="10dp"
        android:id="@+id/remove_bus_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove_bus_menu_button"
        android:layout_gravity="center"
        />
</LinearLayout>