<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main">

    <TableRow>
        <TextView
            android:textSize="20sp"
            android:id="@+id/bus_id_text_view_label"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/bus_id_text_view"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
        <TextView
            android:textSize="20sp"
            android:id="@+id/bus_id_text_view"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
    </TableRow>

    <TableRow>
        <TextView
            android:singleLine="false"
            android:textSize="16sp"
            android:id="@+id/bus_color_text_view_label"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/bus_color_text_view"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
        <TextView
            android:singleLine="false"
            android:textSize="16sp"
            android:id="@+id/bus_color_text_view"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
    </TableRow>

    <TableRow>
        <TextView
            android:singleLine="false"
            android:textSize="16sp"
            android:id="@+id/bus_manufacturer_text_view_label"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/bus_manufacturer_text_view"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
        <TextView
            android:singleLine="false"
            android:textSize="16sp"
            android:id="@+id/bus_manufacturer_text_view"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
    </TableRow>

    <TableRow>
        <TextView
            android:singleLine="false"
            android:textColor="@color/gray"
            android:textSize="12sp"
            android:id="@+id/bus_passenger_capacity_text_view_label"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/bus_passenger_capacity_text_view"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
        <TextView
            android:layout_gravity="center"
            android:singleLine="false"
            android:textColor="@color/gray"
            android:textSize="12sp"
            android:id="@+id/bus_passenger_capacity_text_view"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
    </TableRow>

    <TableRow>
        <TextView
            android:singleLine="false"
            android:textColor="@color/gray"
            android:textSize="12sp"
            android:id="@+id/bus_engine_power_text_view_label"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/bus_engine_power_text_view"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
        <TextView
            android:layout_gravity="center"
            android:singleLine="false"
            android:textColor="@color/gray"
            android:textSize="12sp"
            android:id="@+id/bus_engine_power_text_view"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
    </TableRow>

    <TableRow>
        <TextView
            android:singleLine="false"
            android:textColor="@color/gray"
            android:textSize="12sp"
            android:id="@+id/bus_tank_capacity_text_view_label"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/bus_tank_capacity_text_view"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
        <TextView
            android:layout_gravity="center"
            android:singleLine="false"
            android:textColor="@color/gray"
            android:textSize="12sp"
            android:id="@+id/bus_tank_capacity_text_view"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
    </TableRow>

</TableLayout>