<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main">

    <TableRow>
        <TextView
            android:textSize="20sp"
            android:id="@+id/group_color_name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/color_group_name"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
        <TextView
            android:textSize="20sp"
            android:id="@+id/group_color_value"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
    </TableRow>

    <TableRow>
        <TextView
            android:singleLine="false"
            android:textSize="16sp"
            android:id="@+id/group_manufactorer_name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/manufactorer_group_name"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
        <TextView
            android:singleLine="false"
            android:textSize="16sp"
            android:id="@+id/group_manufactorer_value"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
    </TableRow>

    <TableRow>
        <TextView
            android:singleLine="false"
            android:textSize="16sp"
            android:id="@+id/total_passengers_capacity"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/total_passengers"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
        <TextView
            android:singleLine="false"
            android:textSize="16sp"
            android:id="@+id/total_passengers_capacity_value"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
    </TableRow>

</TableLayout>